# browser_master

./: .gitignore  README.md  TODO.md  actions.yaml  audit_a11y.py  generated_test.py  pyproject.toml  run_demo.py  run_discovery_demo.py  run_lavague_demo.py  run_yaml_demo.py
docs/: 2026-04-28-browser-use-playwright-generator-design.md  2026-04-29-pw-use-yaml-design.md  2026-04-29-rich-mock-design.md  2026-05-06-lavague-discovery-design.md  2026-05-13-enhanced-yaml-runner-design.md  2026-05-13-hardener-parameterization-design.md
docs/archive/: 2026-04-28-browser-use-generator-plan.md  2026-04-29-rich-mock-plan.md  2026-05-06-hardener-implementation.md  2026-05-06-implement-run-task.md  2026-05-06-initialize-explorer.md  2026-05-06-lavague-discovery-freeze.md  2026-05-13-enhanced-yaml-runner-implementation.md  2026-05-13-hardener-parameterization.md
docs/superpowers/plans/: 2026-04-28-browser-use-generator-plan.md  2026-04-29-pw-use-yaml-plan.md
docs/superpowers/specs/: 2026-04-28-browser-use-playwright-generator-design.md  2026-05-13-browser-use-migration-design.md
mock-app/backend/: package-lock.json  package.json  server.js
mock-app/frontend/: package-lock.json
mock-app/frontend/src/: styles.css
mock-app/frontend/src/app/: app.component.html  app.component.ts
mock-app/frontend/src/app/employee/: employee.component.html  employee.component.ts
src/: a11y_patch.js  explorer.py  filter.py  generator.py  hardener.py  runner.py  yaml_runner.py
tests/: test_demo_orchestration.py  test_explorer.py  test_filter.py  test_hardener.py  test_yaml_runner.py
