[project]
name = "browser-master"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "lavague>=1.1.19",
    "lavague-contexts-gemini>=0.2.1",
    "lavague-drivers-selenium>=0.2.15",
    "openai>=2.16.0",
    "playwright>=1.58.0",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "selenium>=4.43.0",
    "setuptools<70",
]
